--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
+---
 sources:
-  elementary-icons-2.7.1.tar.gz: 202c3d5f252e3fae7a24330cfaa7c53e7b4cb5e4
+  elementaryicons3.1.tar.gz: 8d4de27b4adde68592ed2e3773891472045bd621
   rosa-icons-replace-1.0.3.tar.gz: 71877ee4c3f2261c44229613ee36f59469648077
